css/style.css
@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,700;0,900;1,400&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Nunito", sans-serif;
}

body {
  background-image: url("https://images.unsplash.com/photo-1490818387583-1baba5e638af?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1262&q=80");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

/* ----- root variables ----- */
:root {
  --chef-green: #2bb673;
  --text-black: #242424;
  --filter-white: rgba(255, 255, 255, 0.95);
}

/* ----- <nav> styling ----- */
#nav-bar {
  display: flex;
  justify-content: space-between;
  padding: 15px 30px;
  background-color: var(--chef-green);
  color: #fff;
  align-items: center;
}

#menu {
  font-size: 20px;
}

#logo {
  background-color: #fff;
  width: 50px;
  height: 50px;
  border-radius: 50%;
}

#logo img {
  width: 50px;
}

/* ----- custom input styling ----- */
input:focus,
textarea:focus,
select:focus {
  outline: none;
}

input[type="text"] {
  border: none;
  width: 50%;
  padding-left: 10px;
  background-color: rgba(0, 0, 0, 0);
}

form {
  width: 80%;
  border: 1px solid var(--chef-green);
  padding: 15px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  border-radius: 50px;
  background-color: rgba(255, 255, 255, 0.5);
  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
}

/* ----- <main> styling ----- */
main {
  color: var(--text-black);
  background-color: var(--filter-white);
}

#hero {
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
  padding-bottom: 50px;
}

#hero img {
  width: 400px;
}

#hero h1 {
  margin: 0;
  font-size: 50px;
}

#hero div img {
  display: none;
}

/* ----- intro styling ----- */
#intro {
  display: flex;
  align-items: center;
  text-align: center;
  width: 100%;
  padding-top: 50px;
  padding-bottom: 0px;
}

#intro h2 {
  font-size: 30px;
}

.container {
  display: flex;
  flex-direction: column;
  padding: 30px 30px;
}

.container h2,
.container h3 {
  margin-bottom: 15px;
  width: 60%;
}

.container h2 {
  font-weight: 900;
}

#temporary{
  width: 100%;
  text-align: center;
  font-size: 40px;
  color: rgba(0,0,0,.2)
}

.card {
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  width: 100%;
  border-radius: 20px;
  padding: 15px;
  margin-bottom: 20px;
  align-items: center;
  background-color: #fff;
  height: 0%;
}
#card-header {
  display: flex;
  width: 100%;
}

.ct-area {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.card img {
  border-radius: 20px;
  margin-right: 15px;
  max-width: 150px;
  height: 125px;
}

.card-stat {
  font-weight: 400;
}

.line {
  color: #d0d0d0;
}

.card svg {
  margin-right: 5px;
  color: var(--chef-green);
}

#tag-area {
  display: flex;
  padding: 5px 0px;
}

.tag {
  border: 1px solid grey;
  padding: 5px 10px;
  margin-right: 5px;
  border-radius: 20px;
  display: flex;
  align-items: center;
  font-size: 13px;
}

#cal {
  border-color: orange;
}

#fat {
  border-color: red;
}

#sug {
  border-color: var(--chef-green);
}

.inst-link {
  cursor: pointer;
}

#instruction-area {
  width: 100%;
  display: none;
  flex-direction: column;
  justify-content: space-evenly;
  margin-top: 30px;
}

.step-area {
  display: flex;
  margin: 10px 0;
  align-items: flex-start;
}

.step-num {
  margin-right: 10px;
  font-size: 40px;
  color: var(--chef-green);
  opacity: 50%;
}

.step-text:after {
  content: "";
  width: 80%;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  display: block;
}

/* ----- <footer> styling ----- */
footer {
  /* border: 1px solid blue; */
  display: flex;
  justify-content: space-around;
  width: 100%;
  padding: 15px;
  background-color: #f9f9f9;
}

@media (min-width: 1150px) {
  #recipes .card {
    width: 32%;
    margin-right: 10px;
  }
}

@media (min-width: 900px) {
  #hero {
    flex-direction: row-reverse;
    align-items: center;
    text-align: left;
    padding-top: 0px;
    justify-content: space-around;
    overflow: hidden;
  }

  #hero div {
    width: 33%;
  }

  #hero div img {
    display: initial;
    width: 350px;
    margin: 0;
  }

  #hero h1 {
    font-size: 100px;
    margin-top: -50px;
  }

  #hero img {
    width: 500px;
  }

  #intro {
    padding-top: 75px;
    width: 50%;
    margin: auto;
  }

  #recipes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  .card {
    width: 48%;
    display: inline-flex;
    
  }

  .card .card-title {
    width: 100%;
  }
}

